# z-retina

./: .gitignore  README.md  pyproject.toml  reproduce_tableS1.ipynb
configs/: default.yaml
src/z_retina/: __init__.py  asl.py  dataset.py  evaluate.py  model.py  patient_split.py  pseudo_patient.py  splits.py
src/z_retina/apps/: __init__.py  evaluate_cli.py  split_cli.py  train.py
tests/: test_smoke.py
